
PIG-4925: Support for passing the bloom filter to the Bloom UDF (rohini)

PIG-4911: Provide option to disable DAG recovery (rohini)

PIG-4906: Add Bigdecimal functions in Over function (cgalan via daijy)

PIG-2768: Fix org.apache.hadoop.conf.Configuration deprecation warnings for Hadoop 23 (rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5244: Several unit tests are failing in Tez mode after merging spark branch (nkollar via szita)

PIG-5207: BugFix e2e tests fail on spark (szita)

PIG-5194: HiveUDF fails with Spark exec type (szita)

PIG-5231: PigStorage with -schema may produce inconsistent outputs with more fields (knoguchi)

PIG-5224: Extra foreach from ColumnPrune preventing Accumulator usage (knoguchi)

PIG-5235: Typecast with as-clause fails for tuple/bag with an empty schema (knoguchi)

PIG-5238: Fix datetime related test issues after PIG-4748 (szita)

PIG-5185: Job name show "DefaultJobName" when running a Python script (daijy)

PIG-4748: DateTimeWritable forgets Chronology (szita)

PIG-5229: TestPigTest.testSpecificOrderOutput and testSpecificOrderOutputForAlias failing (knoguchi)

PIG-5226: PreprocessorContext.java can deadlock forever with large stderr (jtolar via knoguchi)

PIG-5221: More fs.default.name deprecation warnings (wattsinabox via daijy)

PIG-5222: Fix Junit Deprecations (wattsinabox via daijy)

PIG-5223: TestLimitVariable.testNestedLimitVariable1 and TestSecondarySortMR.testNestedLimitedSort failing (jins via daijy)

PIG-5209: Cross product on flatten(map) fails with ClassCastException (knoguchi)

PIG-5153: Change of behavior in FLATTEN(map) (szita via rohini)

PIG-4677: Display failure information on stop on failure (rohini)

PIG-5198: streaming job stuck with script failure when combined with split (knoguchi)

PIG-5183: We shall mention NATIVE instead of MAPREDUCE operator in document (daijy)

PIG-5182: ant docs target is broken by PIG-5110 (daijy)

PIG-5156: Duplicate jars in CLASSPATH when running test (daijy)
